added mongodb start script to npm - use: npm mongo

--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,6 @@ Temporary Items
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 
+# Added by Oleh Melnyk
 .idea/
+data/
