--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "mongo": "mongod --dbpath=./data",
     "start": "node ./bin/www"
   },
   "dependencies": {
