--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "mongo": "mongod --dbpath=./data",
-    "start": "node ./bin/www"
+    "mongo": "mongod --dbpath ./data/",
+    "server": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
